{
    "name": "WheelControl",
    "maps": [
        {
            "name": "Wheel",
            "id": "a8316dff-158f-4741-80e4-f94a27e1b706",
            "actions": [
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "e546d331-1e9c-4b39-9e8e-dbbb338aad99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "1d491d8f-0909-4eea-8221-f74ac06a842c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Clutch",
                    "type": "Button",
                    "id": "ba16362c-18d0-4772-9e7c-8b31618b30ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Steer",
                    "type": "Button",
                    "id": "5420204c-e810-4514-bde0-f18ebe336660",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60b13b2f-92d2-4210-88cd-d48708ae845c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b687bbf-41ec-491a-94fd-0a6ecf910da2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0312ea2d-0724-4e71-8226-93da96bf4d27",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clutch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dc76e6f-3312-4e65-bf88-bda10c2c86d8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Controller",
            "id": "12f03122-974c-41d2-b215-4ae2697c5697",
            "actions": [
                {
                    "name": "Steer",
                    "type": "PassThrough",
                    "id": "7559e2e0-ab66-4b42-a892-d099a2bccd4b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Accelerate",
                    "type": "Value",
                    "id": "572bcab7-2573-4747-aa1f-e1a478b707d5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Brake",
                    "type": "Value",
                    "id": "47b85871-4f31-4cd4-8cba-0bcf4c70ae5b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Clutch",
                    "type": "Button",
                    "id": "f0807cd4-ad83-45e4-852b-c82aee45300d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftUp",
                    "type": "Button",
                    "id": "b1cc41dc-cb4c-4d3c-8885-138ba1ed07e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.1,pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftDown",
                    "type": "Button",
                    "id": "4cb1bd66-304d-4a88-98f7-3977ab744c90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.1,pressPoint=0.1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3bf7d9c7-b0cc-4bec-9ddd-98f24ed87c9f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19182bf7-a638-457a-91c4-c7da5e7937fd",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c05ede4-7a4a-4f85-8406-7a12376b24c4",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f77ab541-30b1-4e6f-b50b-1686b9b28e93",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clutch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3c24bf7-d1cf-4f6f-9fcf-8b9ddb8a91cb",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b10ae1c-c6f5-4cee-8e64-699829356c08",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}